<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="aplicativo_lista_vip_cursdo_android">Aplicativo Lista VIP Cursdo Android</string>
    <string name="txt_primeiro_nome">Primeiro Nome</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_sobrenome">Sobrenome</string>
    <string name="txt_hint_curso">devandroid.amaro.applistacurso.model.Curso</string>
    <string name="txt_curso">devandroid.amaro.applistacurso.model.Curso</string>
    <string name="txt_hint_telefone">Telefone</string>
    <string name="txt_telefone">Telefone</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>